<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bnkk.padc_implicit_intents.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Button
            android:id="@+id/btn_share_compat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:onClick="onTapBtnShareCompat"
            android:text="@string/share_compat" />

        <Button
            android:id="@+id/btn_navigate_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:onClick="onTapBtnNavigateMap"
            android:text="@string/map" />

        <Button
            android:id="@+id/btn_make_ph_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:onClick="onTapBtnMakePhCall"
            android:text="@string/ph_call" />

        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:onClick="onTapBtnSendEmail"
            android:text="@string/email" />

        <Button
            android:id="@+id/btn_open_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:onClick="onTapBtnOpenCamera"
            android:text="@string/camera" />

        <Button
            android:id="@+id/btn_picture_from_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:onClick="onTapBtnPictureFromStorage"
            android:text="@string/picture_from_storage" />

        <Button
            android:id="@+id/btn_save_event_in_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:onClick="onTapBtnSaveEventInCalendar"
            android:text="@string/calendar" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
